--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "jose-cyber-pro",
   "version": "1.0.0",
   "private": true,
- "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "export": "next export",
-  "start": "next start"
-}
-,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "export": "next export",
+    "start": "next start"
+  },
   "dependencies": {
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^11.0.0",
+    "framer-motion": "^11.18.2",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.474.0",
     "next": "14.2.0",
+    "next-mdx-remote": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^10.0.0"
