--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "export": "next export",
+"build": "next build",    "export": "next export",
     "start": "next start"
   },
   "dependencies": {
@@ -13,11 +12,12 @@
     "framer-motion": "^11.18.2",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.474.0",
-    "next": "14.2.0",
+    "next": "15.5.2",
     "next-mdx-remote": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-intersection-observer": "^10.0.0"
+    "react-intersection-observer": "^10.0.0",
+    "resend": "^6.4.2"
   },
   "devDependencies": {
     "@types/node": "24.10.0",
